Resolves: tdf#101648 disable new/modify of table styles

cause there is no ui for it at the moment, so it crashes

Change-Id: I703449ff69f93b6385d3bf9225abe81682d3b893